[package]
name = "rust-guess"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread"] }

[dev-dependencies]
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v4"] }
http-body-util = "0.1.3"
